<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:dividerPadding="200dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        style="@style/EditTextStyle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:autofillHints="@string/goal"
        android:ems="10"
        android:hint="@string/inputGoal"
        android:inputType="textPersonName"
        style="@style/EditTextStyle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:autofillHints="@string/info"
        android:hint="@string/inputInfo"
        android:inputType="textMultiLine"
        style="@style/EditTextStyle" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format"
        style="@style/TextStyle" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="55dp"
        style="@style/EditTextStyle">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regularDonate" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneDonate" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term" />

    <DatePicker
        android:id="@+id/datePicker"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summ" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/summ"
        android:hint="@string/inputSumm"
        android:inputType="number"
        style="@style/EditTextStyle"/>

    <Button
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photoButton" />

    <Button
        android:onClick="onClick"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicButton"
        style="@style/ButtonStyle"/>

</LinearLayout>
</ScrollView>