<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="200dp"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="223dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextStyle"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/TextStyle"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/info" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextStyle"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/author" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="156dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/war"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView16"
                style="@style/TextStyleRight"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:text="@string/end" />

            <TextView
                android:id="@+id/textView14"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Сумма" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/donate" />

            <TextView
                android:id="@+id/textView15"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Откуда списать" />

            <RadioGroup
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vkPay" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masterCard" />

            </RadioGroup>

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donateButton" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>