<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Account">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="200dp"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Element">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextStyleBig"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/TextStyle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:text="@string/goal" />


                <ImageView
                    style="@style/Element"
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/war" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Element">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextStyleBig"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextStyle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="5dp"
                    android:text="@string/goal" />

                <ImageView
                    style="@style/Element"
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/coffee" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Element">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextStyleBig"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextStyle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView6"
                    android:layout_marginTop="5dp"
                    android:text="@string/goal" />

                <ImageView
                    style="@style/Element"
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/medic" />

            </RelativeLayout>

            <Button
                android:onClick="onClick"
                android:id="@+id/button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NewColl"
                tools:ignore="OnClick" />


        </LinearLayout>
    </ScrollView>